# eqlog

./: .gitmodules  Ast.cs  Cargo.toml  Dockerfile  LICENSE  PrettyPrinter.cs  Program.cs  README  README.md  TypeChecker.cs  \  build.rs  debug-notes  example.qt  notes  qt.csproj  qt.sln  run-docker  rustfmt.toml  table-refactor-prompt  test.ts
.claude/: settings.local.json
Parse/: AstParser.cs  Qt.g4  Qt.interp  Qt.tokens  QtBaseListener.cs  QtBaseVisitor.cs  QtLexer.cs  QtLexer.interp  QtLexer.tokens  QtListener.cs  QtParser.cs  QtVisitor.cs  ToAstVisitor.cs
TypeChecking/: Cwf.cs  ModelObjects.cs  TypeChecker.cs  Z3Model.cs
activate-rebuild-features/: Cargo.toml  README.md
cwf-theory/: Cargo.toml  build.rs
cwf-theory/src/: cwf.eql  cwf.eqlog  lib.rs
env/: Dockerfile  cargo  enter.bash  enter.fish  run-docker  rustc  setup
eqlog/: 123  :w  Cargo.toml  algorithm-sketch  build.rs  notes  test.dl
eqlog-eqlog/: CLAUDE.md  Cargo.toml  build.rs
eqlog-eqlog-activate-rebuild/: Cargo.toml  README.md
eqlog-eqlog-tree/: Cargo.toml  src
eqlog-eqlog/prebuilt/: eqlog.rs
eqlog-eqlog/src/: eqlog.eql  eqlog.eqlog  lib.rs
eqlog-runtime/: Cargo.toml  build.rs  test_removal.rs
eqlog-runtime/src/: btree_set.rs  btree_set_impl.rs  lib.rs  lib_impl.rs  prefix_tree.rs  toposort.rs  types.rs  unification.rs  unification_impl.rs  wbtree_map.rs
eqlog-runtime/src/collections/btree/: map.rs  mem.rs  node.rs
eqlog-runtime/src/collections/btree/set/: entry.rs
eqlog-runtime/src/wbtree/: map.rs  set.rs
eqlog-souffle/: .gitignore  Cargo.toml
eqlog-souffle/src/: ast.rs  emit.rs  error.rs  grammar.lalrpop  main.rs  ram.rs  signature.rs  sort_inference.rs  theory.rs  theory_check.rs  theory_test.rs  theory_to_ram.rs  unification.rs  union_map.rs
eqlog-test/: Cargo.toml  README.md  build.rs
eqlog-test-compile/: Cargo.toml  README.md
eqlog-test-compile/tests/: change-detection.rs  errors.rs
eqlog-test-eval/: Cargo.toml  README.md  build.rs
eqlog-test-eval/src/: branches.eql  branches_test.rs  distr_lattice.eql  equational_monoid.eql  eval_func.rs  group.eql  indexed_abelian_group.eql  indexed_abelian_group_test.rs  indexed_endo_set_rules.eql  indexed_pointed.eql  indexed_pointed_test.rs  indexed_set.eql  indexed_set_test.rs  indexed_set_with_total_mors.eql  indexed_set_with_total_mors.eql.deactivated  indexed_set_with_total_mors.rs  inference.eql  int.eql  int_test.rs  lex_category.eql  lex_category_test.rs  lib.rs  logic.eql  matches.eql  matches_rel.eql  matches_rel_test.rs  matches_test.rs  monoid.eql  nat.eql  nat_test.rs  nested_model.eql  pca.eql  pointed_test.rs  poset.eql  poset_test.rs  product_category.eql  product_category_test.rs  semilattice_test.rs  subset.eql  subset_morphism.eql  (+8 more)
eqlog-test-failure/: Cargo.toml  README.md
eqlog-test-failure/tests/: tests.rs
eqlog-test/src/: category.eqlog  distr_lattice.eqlog  group.eqlog  group_test.rs  inference.eql  inference.eqlog  inference_test.rs  lex_category.eqlog  lex_category_test.rs  lib.rs  logic.eql  logic_test.rs  monoid.eqlog  monoid_test.rs  partial_magma.eqlog  pca.eqlog  pca_test.rs  pointed.eqlog  pointed_test.rs  poset.eqlog  product_category.eqlog  reduction_from_nullary.eqlog  (+5 more)
eqlog-tree/: Cargo.toml  build.rs  main.rs
eqlog-tree/src/: build.rs  debug.rs  eqlog_util.rs  error.rs  flat_ast.rs  flat_eqlog  flat_eqlog.rs  flat_to_llam.rs  flatten.rs  flatten_v2.rs  fmt_util.rs  grammar.lalrpop  grammar_util.rs  index_selection.rs  lib.rs  llam.rs  main.rs  rust_gen.rs  semantics  slice_group_by.rs  sort_if_stmts_pass.rs  source_display.rs  var_info_pass.rs
eqlog-util/: Cargo.toml
eqlog/eqlog-test/: Cargo.toml
eqlog/eqlog-test/src/: distr_lattice.eqlog  distr_lattice_test.rs  equational_monoid.eqlog  finite-products.eqlog  group_test.rs  lex_category_test.rs  lib.rs  logic.eqlog  logic_test.rs  monoid.eqlog  monoid_test.rs  partial_magma.eqlog  pointed.eqlog  pointed_test.rs  poset_test.rs  product_category.eqlog  product_category_test.rs  semilattice.eqlog  semilattice_test.rs  trans_refl.eqlog  trans_refl_test.rs  trivial_idempotent.eqlog
eqlog/eqlog-util/src/: lib.rs  unification.rs
eqlog/src/: analysis.rs  ast.rs  ast_v1.rs  build.rs  closure.rs  config.rs  debug.rs  direct_ast.rs  eqlog_util.rs  error.rs  flat_ast.rs  flat_eqlog.rs  flat_to_llam.rs  flatten.rs  flatten_v2.rs  fmt_util.rs  fork_continuations_pass.rs  fork_suffix_pass.rs  grammar.lalrpop  grammar.rs  grammar_new.lalrpop  grammar_util.rs  grammar_v1.lalrpop  index_selection.rs  indirect_ast.rs  join.rs  lib.rs  llam.rs  main.rs  model.rs  module.rs  query_action.rs  rule_check.rs  rust_gen.rs  signature.rs  slice_group_by.rs  sort_if_stmts_pass.rs  source_display.rs  symbol_table.rs  syntax.rs  (+5 more)
eqlog/src/flat_eqlog/: ast.rs  diagonals.rs  forks_continuations.rs  index_selection.rs  mod.rs  range.rs  resolve_age_all_queries.rs  semi_naive.rs  sort.rs  sort_if_stmts.rs  var_info.rs
eqlog/src/ram/: ast.rs  env.rs  mod.rs  sort.rs  strictness.rs
eqlog/src/rust_gen/: flat_eqlog.rs  mod.rs  rule.rs  table.rs  types.rs
eqlog/src/semantics/: check_epic.rs  mod.rs  symbol_table.rs  type_inference.rs
examples/inference/: Cargo.toml  test.ts
examples/inference/src/: ast.rs  debugging.rs  grammar.lalrpop  grammar_util.rs  main.rs  program.eqlog  type_check.rs  type_system.eqlog
exp-epa/: Cargo.toml
phl/: .gitmodules  CMakeLists.txt
phl/include/: closure.hpp  cwf.hpp  partial_structure.hpp  phl.hpp  union_find.hpp  util.hpp
phl/src/: closure.cpp  closure_impl.hpp  cwf.cpp  partial_structure.cpp  union_find.cpp
phl/test/: closure.cpp
src/: Ast.cs  PrettyPrinter.cs  Program.cs  alloc.rs  ast.rs  boxed.rs  cwf.eqlog  cwf.rs  cwf_checker.rs  cwf_model.rs  cwf_new.eqlog  cwf_syntax.rs  example.qt  grammar.lalrpop  lib.rs  main  main.rs  model.rs  qt.csproj  rules.rs  type_check.rs  type_checker.rs  type_system.eqlog
test-crates/: .gitignore  Cargo.toml  README
tests/: Soundness.cs  tests.csproj
v1_to_v2/: Cargo.toml
v1_to_v2/src/: ast_v1.rs  error.rs  grammar_v1.lalrpop  main.rs  source_display.rs
(+233 files in other folders)
