[workspace]

members = [
  "eqlog",
  "eqlog-runtime",
  "eqlog-test",
  "eqlog-test-failure",
	"v1_to_v2",
  "examples/inference",
  "eqlog-eqlog",
  "eqlog-tree",
]

# Keep examples out of workspace. It should be possible to build them without a
# local eqlog checkout.
exclude = [
  "examples/semilattice",
	"cwf-theory",
	"exp-epa",
]


# Make sure to build eqlog-eqlog always with optimizations.
[profile.dev.package.eqlog-eqlog]
opt-level = 1
debug = false
[profile.dev.build-override]
opt-level = 1
debug = false
