[workspace]

members = [
  "eqlog",
  "eqlog-runtime",
  "eqlog-test",
  "eqlog-test-failure",
	"v1_to_v2",
  "examples/inference",
  "eqlog-eqlog",
  "eqlog-tree",
]

# Keep examples out of workspace. It should be possible to build them without a
# local eqlog checkout.
exclude = [
  "examples/semilattice",
	"cwf-theory",
	"exp-epa",
]

[workspace.package]
edition = "2021"
version = "0.3.1"
authors = [
  "Martin E. Bidlingmaier <martin.bidlingmaier@mbid.me>",
  "Jakob Botsch Nielsen <jakob.botsch.nielsen@gmail.com>",
]
license = "MIT"
description = "Datalog with equality"
repository = "https://github.com/eqlog/eqlog/"
readme = "README.md"

# Make sure to build eqlog-eqlog always with optimizations.
[profile.dev.package.eqlog-eqlog]
opt-level = 1
debug = false
[profile.dev.build-override]
opt-level = 1
debug = false
