[workspace]
resolver = "2"

members = [
  "eqlog",
  "eqlog-runtime",
  "eqlog-test-eval",
  "eqlog-test-compile",
  # "v1_to_v2",
  # "examples/inference",
  "eqlog-eqlog",
  # "eqlog-eqlog-tree",
  # "eqlog-tree",
]

# Keep examples out of workspace. It should be possible to build them without a
# local eqlog checkout.
exclude = [
  "examples/semilattice",
  "cwf-theory",
  "exp-epa",
]

[workspace.package]
edition = "2021"
version = "0.8.0"
authors = [
  "Martin E. Bidlingmaier <martin.bidlingmaier@mbid.me>",
  "Jakob Botsch Nielsen <jakob.botsch.nielsen@gmail.com>",
]
license = "MIT"
description = "Datalog with equality"
repository = "https://github.com/eqlog/eqlog/"
readme = "README.md"

# Use optimization for build scripts; eqlog is very slow otherwise.
[profile.dev.build-override]
opt-level = 3
debug = false
[profile.release.build-override]
opt-level = 3
debug = false
