[package]
name = "activate-rebuild-features"
version = "0.1.0"
edition = "2021"

[dependencies]
# These activate features for *all* crates in the containing workspace:
eqlog-eqlog = { path = "../eqlog-eqlog", features = ["rebuild"] }
eqlog = { path = "../eqlog", features = ["rebuild"] }
eqlog-tree = { path = "../eqlog-tree", features = ["rebuild"] }
