[package]
name = "eqlog-eqlog"
version = "0.3.0"
edition = "2021"
authors = [
  "Martin E. Bidlingmaier <martin.bidlingmaier@mbid.me>",
]
license = "MIT"
description = "Datalog with equality"
repository = "https://github.com/eqlog/eqlog/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eqlog-runtime = { version = "0.2.3" }

[build-dependencies]
eqlog = { version = "0.2.3" }
