[package]
name = "eqlog-eqlog"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eqlog-runtime = { version = "= 0.7.1" }

[build-dependencies]
eqlog = { version = "= 0.7.1", optional = true }

[features]
default = []
rebuild = ["dep:eqlog"]
