[package]
name = "eqlog-runtime"
version = "0.1.0"
edition = "2021"
authors = [
  "Martin E. Bidlingmaier <martin.bidlingmaier@mbid.me>",
  "Jakob Botsch Nielsen <jakob.botsch.nielsen@gmail.com>",
]
license = "MIT"
description = "Datalog with equality"
repository = "https://github.com/eqlog/eqlog/"

[dependencies]
tabled = "0.7"
