[package]
name = "eqlog"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
lalrpop-util = { version = ">= 0", features = [ "lexer" ] }
regex = ">= 0"
maplit = ">= 0"
itertools = ">= 0"
convert_case = ">= 0"
indoc = ">= 0"
sha2 = ">= 0"
base16ct = { version = ">= 0", features = ["alloc"] }
eqlog-eqlog-crates-prebuilt = { version = "= 0.5.1", package = "eqlog-eqlog", optional = true }
eqlog-eqlog-tree-prebuilt = { version = ">= 0", path = "../eqlog-eqlog", package = "eqlog-eqlog", optional = true }
eqlog-eqlog-tree-rebuild = { version = ">= 0", path = "../eqlog-eqlog", package = "eqlog-eqlog", features = ["rebuild"], optional = true }

[build-dependencies]
lalrpop = { version = ">= 0", features = [ "lexer" ] }
sha2 = ">= 0"
base16ct = { version = ">= 0", features = ["alloc"] }

[features]
default = ["crates-prebuilt"]
crates-prebuilt = ["dep:eqlog-eqlog-crates-prebuilt"]
tree-prebuilt = ["dep:eqlog-eqlog-tree-prebuilt"]
tree-rebuild = ["dep:eqlog-eqlog-tree-rebuild"]
