[package]
name = "eqlog"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
lalrpop-util = { version = ">= 0", features = [ "lexer" ] }
regex = ">= 0"
maplit = ">= 0"
itertools = ">= 0"
convert_case = ">= 0"
indoc = ">= 0"
sha2 = ">= 0"
base16ct = { version = ">= 0", features = ["alloc"] }
eqlog-eqlog = { path= "../eqlog-eqlog", version = "= 0.5.1" }

[build-dependencies]
lalrpop = { version = ">= 0", features = [ "lexer" ] }
sha2 = ">= 0"
base16ct = { version = ">= 0", features = ["alloc"] }

[features]
default = []
rebuild = []
