[package]
name = "v1_to_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0", features = [ "lexer" ] }
regex = "1"
convert_case = "0"
itertools = "0"
clap = { version = "4", features = ["derive"] }
askama = "0"

[build-dependencies]
lalrpop = { version = "0", features = [ "lexer" ] }
