[package]
name = "v1_to_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "*", features = [ "lexer" ] }
regex = "*"
convert_case = "*"
itertools = "*"
clap = { version = "*", features = ["derive"] }
askama = "*"

[build-dependencies]
lalrpop = { version = "*", features = [ "lexer" ] }
